Cobbler CHANGELOG
(all entries mdehaan@redhat.com unless noted otherwise)

* Tue Feb 20 2007 - 0.4.3
- Added netboot_enabled option for systems to control install loops in programmatic context.
- Ongoing ...

* Mon Feb 19 2007 - 0.4.2
- Fix bug in "cobbler system remove"

* Mon Feb 19 2007 - 0.4.1
- Bundle menu.c32 for older distros
- Unbundle Cheetah as it's available at http://www.python.org/pyvault/centos-4-i386/

* Mon Feb 19 2007 - 0.4.0
- Added feature to minimize the need to run "cobbler sync" for add commands
  Now only need to run sync when files change behind the scenes or when
  manually editing YAML
- Moving back to Cheetah for templating (old kickstarts should escape $ with \$)
- PXE menus for the default profile.  Type "menu" at the prompt to get a menu, or wait for local boot.
- Manpage cleanup and clarification
- Bugfix: cobbler will no longer create repo files on remotes when --local-filename is not used for "repo add"

* Mon Jan 28 2007 - 0.3.9
- Make init scripts correspond with FC-E guidelines

* Thu Jan 24 2007 - 0.3.8
- Fixed minor bug in logfile processing related to 0.3.7

* Thu Jan 24 2007 - 0.3.7
- Default/examples kickstarts are now fully automatic (added hd type/size detection).
- Kickstart tracking now includes remote syslog support, just run "cobbler sync" to enable.
- "cobbler status" command improved to include syslog info/times.
- Added fc6 kickstart file that was left out of the RPM earlier
- Added mini domU kickstart
- bugfix: don't install mod_python watcher on older Apache installs (like RHEL4) as it
  somehow corrupts downloads on older copies.  kickstart tracking by syslog still works
  on those platforms.  (This only applies to the cobbler server, not clients).

* Thu Dec 21 2006 - 0.3.6
- locking feature now enabled
- "enchant" now supports provisioning virtual images remotely when using --is-virt=yes
- cobbler no longer restarts httpd if the config file already exists.